--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -44,6 +44,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solutions\Chapter 1\Ex1.cs" />
+    <Compile Include="Solutions\Chapter 1\Ex3.cs" />
+    <Compile Include="Solutions\Template.cs" />
+    <Compile Include="Solutions\Chapter 1\Ex2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
