Ex 1.4 & Fix for Ex 1.1

--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\Chapter 1\Ex1.cs" />
     <Compile Include="Solutions\Chapter 1\Ex3.cs" />
+    <Compile Include="Solutions\Chapter 1\Ex4.cs" />
     <Compile Include="Solutions\Template.cs" />
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
   </ItemGroup>
