--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -60,6 +60,12 @@
     <Compile Include="Solutions\Chapter 2\Ex7.cs" />
     <Compile Include="Solutions\Chapter 2\Ex8.cs" />
     <Compile Include="Solutions\Chapter 2\Ex2.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex3.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex4.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex5.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex6.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex2.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex1.cs" />
     <Compile Include="Solutions\Template.cs" />
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
   </ItemGroup>
