--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -45,32 +45,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\Chapter 1\Ex1.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex3.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex4.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex5.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex9.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex8.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex7.cs" />
-    <Compile Include="Solutions\Chapter 1\Ex6.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex1.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex3.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex4.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex5.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex6.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex7.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex8.cs" />
-    <Compile Include="Solutions\Chapter 2\Ex2.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex3.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex4.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex5.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex6.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex2.cs" />
-    <Compile Include="Solutions\Chapter 3\Ex1.cs" />
-    <Compile Include="Solutions\Template.cs" />
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
