--- a/CtCI Tests/CtCI Tests.csproj
+++ b/CtCI Tests/CtCI Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chapter 1\Ex1Tests.cs" />
+    <Compile Include="Chapter 1\Ex2Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
