--- a/CtCI Tests/CtCI Tests.csproj
+++ b/CtCI Tests/CtCI Tests.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Chapter 1\Ex1Tests.cs" />
     <Compile Include="Chapter 1\Ex2Tests.cs" />
+    <Compile Include="Chapter 1\Ex3Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
