--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Solutions\Chapter 1\Ex4.cs" />
     <Compile Include="Solutions\Chapter 3\Ex1.cs" />
     <Compile Include="Solutions\Chapter 3\Ex2.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
