--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -49,10 +49,16 @@
     <Compile Include="Solutions\Chapter 1\Ex3.cs" />
     <Compile Include="Solutions\Chapter 1\Ex4.cs" />
     <Compile Include="Solutions\Chapter 2\Ex1.cs" />
+    <Compile Include="Solutions\Chapter 2\Ex2.cs" />
+    <Compile Include="Solutions\Chapter 2\Ex3.cs" />
+    <Compile Include="Solutions\Chapter 2\Ex4.cs" />
+    <Compile Include="Solutions\Chapter 2\Ex6.cs" />
     <Compile Include="Solutions\Chapter 2\LinkedList.cs" />
     <Compile Include="Solutions\Chapter 3\Ex1.cs" />
     <Compile Include="Solutions\Chapter 3\Ex2.cs" />
     <Compile Include="Solutions\Chapter 3\Ex3.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex4.cs" />
+    <Compile Include="Solutions\Chapter 3\Ex5.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
