--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
     <Compile Include="Solutions\Chapter 1\Ex3.cs" />
     <Compile Include="Solutions\Chapter 1\Ex4.cs" />
+    <Compile Include="Solutions\Chapter 1\Ex9.cs" />
     <Compile Include="Solutions\Chapter 2\Ex1.cs" />
     <Compile Include="Solutions\Chapter 2\Ex2.cs" />
     <Compile Include="Solutions\Chapter 2\Ex3.cs" />
