--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Solutions\Chapter 16\Ex23.cs" />
     <Compile Include="Solutions\Chapter 16\Ex25.cs" />
     <Compile Include="Solutions\Chapter 16\Ex5.cs" />
+    <Compile Include="Solutions\Chapter 16\Ex6.cs" />
     <Compile Include="Solutions\Chapter 1\Ex1.cs" />
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
     <Compile Include="Solutions\Chapter 1\Ex3.cs" />
