--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solutions\Chapter 16\Ex10.cs" />
     <Compile Include="Solutions\Chapter 16\Ex11.cs" />
     <Compile Include="Solutions\Chapter 16\Ex2.cs" />
     <Compile Include="Solutions\Chapter 16\Ex1.cs" />
