--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solutions\Chapter 16\Ex10.cs" />
     <Compile Include="Solutions\Chapter 16\Ex11.cs" />
+    <Compile Include="Solutions\Chapter 16\Ex16.cs" />
     <Compile Include="Solutions\Chapter 16\Ex2.cs" />
     <Compile Include="Solutions\Chapter 16\Ex1.cs" />
     <Compile Include="Solutions\Chapter 16\Ex23.cs" />
