Ex 17.2 (no test)

--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Solutions\Chapter 16\Ex25.cs" />
     <Compile Include="Solutions\Chapter 16\Ex5.cs" />
     <Compile Include="Solutions\Chapter 16\Ex6.cs" />
+    <Compile Include="Solutions\Chapter 17\Ex2.cs" />
     <Compile Include="Solutions\Chapter 1\Ex1.cs" />
     <Compile Include="Solutions\Chapter 1\Ex2.cs" />
     <Compile Include="Solutions\Chapter 1\Ex3.cs" />
@@ -78,7 +79,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Solutions\Chapter 10\" />
-    <Folder Include="Solutions\Chapter 17\" />
     <Folder Include="Solutions\Chapter 4\" />
     <Folder Include="Solutions\Chapter 5\" />
     <Folder Include="Solutions\Chapter 8\" />
