--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Solutions\Chapter 16\Ex25.cs" />
     <Compile Include="Solutions\Chapter 16\Ex5.cs" />
     <Compile Include="Solutions\Chapter 16\Ex6.cs" />
+    <Compile Include="Solutions\Chapter 17\Ex9.cs" />
     <Compile Include="Solutions\Chapter 17\Ex5.cs" />
     <Compile Include="Solutions\Chapter 17\Ex3.cs" />
     <Compile Include="Solutions\Chapter 17\Ex2.cs" />
