--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,7 @@
     <Compile Include="Solutions\Chapter 16\Ex25.cs" />
     <Compile Include="Solutions\Chapter 16\Ex5.cs" />
     <Compile Include="Solutions\Chapter 16\Ex6.cs" />
+    <Compile Include="Solutions\Chapter 17\Ex19.cs" />
     <Compile Include="Solutions\Chapter 17\Ex9.cs" />
     <Compile Include="Solutions\Chapter 17\Ex5.cs" />
     <Compile Include="Solutions\Chapter 17\Ex3.cs" />
