--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Solutions\Chapter 3\Ex4.cs" />
     <Compile Include="Solutions\Chapter 3\Ex5.cs" />
     <Compile Include="Solutions\Chapter 3\Ex6.cs" />
+    <Compile Include="Solutions\Chapter 8\Ex5.cs" />
     <Compile Include="Solutions\Chapter 8\Ex11.cs" />
     <Compile Include="Solutions\Chapter 8\Ex1.cs" />
   </ItemGroup>
