Ex 4.6 (no test)

--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Solutions\Chapter 3\Ex5.cs" />
     <Compile Include="Solutions\Chapter 3\Ex6.cs" />
     <Compile Include="Solutions\Chapter 4\Ex2.cs" />
+    <Compile Include="Solutions\Chapter 4\Ex6.cs" />
     <Compile Include="Solutions\Chapter 4\Ex5.cs" />
     <Compile Include="Solutions\Chapter 4\Ex4.cs" />
     <Compile Include="Solutions\Chapter 4\Ex3.cs" />
