Ex 17.4 (no test)

--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Solutions\Chapter 16\Ex6.cs" />
     <Compile Include="Solutions\Chapter 17\Ex19.cs" />
     <Compile Include="Solutions\Chapter 17\Ex1.cs" />
+    <Compile Include="Solutions\Chapter 17\Ex4.cs" />
     <Compile Include="Solutions\Chapter 17\Ex9.cs" />
     <Compile Include="Solutions\Chapter 17\Ex5.cs" />
     <Compile Include="Solutions\Chapter 17\Ex3.cs" />
