--- a/CtCI Solutions/CtCI Solutions.csproj
+++ b/CtCI Solutions/CtCI Solutions.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Algorithms\Sorting\MergeSort.cs" />
     <Compile Include="Algorithms\Sorting\InsertionSort.cs" />
     <Compile Include="Algorithms\Sorting\BubbleSort.cs" />
-    <Compile Include="Data Structures\HashTable.cs" />
+    <Compile Include="Data Structures\BinarySearchTree.cs" />
     <Compile Include="Data Structures\Heap.cs" />
     <Compile Include="Data Structures\Nodes.cs" />
     <Compile Include="Program.cs" />
